@@ -32,7 +32,7 @@ provides:
 requires:
   Dist::Zilla::Role::BeforeBuild: '0'
   Git::Wrapper: '0'
-  Moose: '0'
+  Moose: '2.1203'
   Path::Tiny: '0'
   Safe::Isa: '0'
   Try::Tiny: '0'
