@@ -19,7 +19,7 @@ my %WriteMakefileArgs = (
   "PREREQ_PM" => {
     "Dist::Zilla::Role::BeforeBuild" => 0,
     "Git::Wrapper" => 0,
-    "Moose" => 0,
+    "Moose" => "2.1203",
     "Path::Tiny" => 0,
     "Safe::Isa" => 0,
     "Try::Tiny" => 0,
@@ -47,7 +47,7 @@ my %FallbackPrereqs = (
   "Dist::Zilla::Plugin::Git::GatherDir" => 0,
   "Dist::Zilla::Role::BeforeBuild" => 0,
   "Git::Wrapper" => 0,
-  "Moose" => 0,
+  "Moose" => "2.1203",
   "Path::Tiny" => 0,
   "Safe::Isa" => 0,
   "Test::DZil" => 0,
