@@ -2,6 +2,7 @@ Revision history for Dist-Zilla-Plugin-Git-FilePermissions
 
 {{$NEXT}}
 
+  - Increased Moose dependency to 2.1203 because older versions break with current Module::Runtime
   - Added xt/author/perltidy.t test based on Test::PerlTidy
   - Remove non-existing default directories from no_index in META.* files
   - Removed develop dependencies from META.json file
